			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.03g: *********************************

BUG: (09/06/05, RK) NCC no longer displays Part, Wire, Port counts when a netlist error prevents it from building a netlist. Instead it says couldn't build netlist. See errors. (Bugzilla #523)

BUG: (09/06/05, RK) NCC suggests use of resistorType annotation if resistor type is missing. Updated NCC user manual to describe transistorType and resistorType annotations (Bugzilla #484)


IMP/MAN: (09/06/05, JKG) Added option to encase top level cell in subckt defintion for spice output.

************************* Version 8.03f: *********************************

IMP/MAN: (09/05/05, SMR) Further improvements for EDIF bus output.  Configuration
     settings are now in EDIF Preferences.

IMP: (09/05/05, DN) Transactional DB: LibId.java, ExportId.java, PortProtoId.java.

IMP: (09/06/05, DN) GenMath.figureAngle rounds to nearest 1/10 (was to lower).

IMP: (09/05/05, GVG) Add one option in Edit menu to toggle between neither end/both ends (bugzilla #489)

IMP: (09/05/05, GVG) Ability to search cells by name under ExplorerTree

IMP: (09/05/05, GVG) Expand explorer tree in Manual to place where html page is open (bugzilla #515).
Same for preferences dialog.

IMP: (09/05/05, GVG) Include library name in error message in LE (Bugzilla #516)
FIX: Added 'in (" + localCell.getLibrary().getName()+")' in error message.

IMP/MAN: (09/04/05, JKG) Add button to allow user to reset layer parasitics to factory default values

IMP: (09/04/05, DN) In getShape methods EditWindow class is replaced by EditWindow_ interface
    for future changes.

IMP: (09/04/05, DN) Step to transactional database: CellId.java, CellUsage.java, NodePortoId.java .

IMP: (09/04/05, DN) Less error messages on "unconnected pins" in NetCell.java .
